fixing nav overlap

--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,7 @@ body{
 /* frame for content */
 #content {
     margin-top: 5vh;
+    top: 12%;
 }
 
 /* HEADING */
